# bishop.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  old_tests.rs  rustfmt.toml
bishop-cli/: Cargo.toml  README.md  usage.txt
bishop-cli/src/: input_data.rs  main.rs
drunken-bishop-cli/: Cargo.toml
drunken-bishop-cli/src/: main.rs
src/: bishop.rs  bishop2.rs  bishop_art.rs  input.rs  lib.rs  main.rs  result.rs  vec2d.rs
test_stuff/: foobar_hash
