[package]
name = "bishop"
version = "0.3.0"
authors = ["AbsurdlySuspicious <repom2@airmail.cc>"]
edition = "2018"

description = "Library for visualizing keys and hashes using OpenSSH's Drunken Bishop algorithm"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/bishop"
repository = "https://github.com/AbsurdlySuspicious/bishop.rs"
keywords = ["fingerprint", "visialization", "key-visialization"]
readme = "README.md"

[workspace]
members = [
  "bishop-cli"
]

[dependencies]
unicode-width = "0.1.6"
thiserror = "1.0"

[dev-dependencies]
hex = "0.3.2"
